[Feat] Updated code changes

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-SQL_SERVER=your_sql_server
-DATABASE=your_database
-USERNAME=your_username
-PASSWORD=your_password
-DRIVER=ODBC Driver 17 for SQL Server
+SQL_SERVER="127.0.0.1:1433"
+SQL_DATABASE="master"
+SQL_USERNAME="sa"
+SQL_PASSWORD="password123!"
+SQL_DRIVER="ODBC Driver 17 for SQL Server"
